--- a/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.css
+++ b/force-app/main/default/lwc/utterSenseKnowledgeRecommendation/utterSenseKnowledgeRecommendation.css
@@ -4,8 +4,8 @@
 }
 
 .einstein-logo {
-	width: 64px;
-	height: 64px;
+	width: 40px;
+	height: 40px;
 	margin: 0 auto;
 }
 
@@ -17,4 +17,23 @@
 .slds-box {
 	background-color: #ffffff;
 	border-radius: 4px;
+}
+
+.content-container {
+	position: relative;
+	min-height: 200px;
+}
+
+.spinner-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(255, 255, 255, 0.75);
+	z-index: 1;
+}
+
+.response-container {
+	position: relative;
 }
